# rs_libGetDeviceInfo

./: Cargo.toml  README.md
src/: check_av.rs  lib.rs  netcard.rs  network.rs  system.rs  unit.rs
src/alg/: mod.rs
src/cproject/: build.sh  hw.c  hw.h
src/system/: pubunit.rs
